# aluminum-os

./: .gitignore  ARCHITECTURE.md  BATTLE_PLAN_v3.14.md  CANONICAL_HOUSES.md  CANONICAL_REPO_HIERARCHY.md  CLAUDE.md  Cargo.toml  GAP_SPHERES.md  Makefile  Microsoft_Copilot_S4_Review_Brief.md  README.md  package-lock.json  package.json
architecture/: Grand_Synthesis_v2.0.md  Socratic_OS_v4.0.md  Unified_Field_v3.0.md
cli/: Cargo.toml
cli/src/: config.rs  lib.rs  main.rs
cli/src/chat/: mod.rs
cli/src/council/: mod.rs
cli/src/governance/: mod.rs
cli/src/sync/: mod.rs
cli/src/uws/: mod.rs
council/: Copilot_365_Architecture_Review.md  Council_Session_March_8_2026.md  claude_s1_phase_1.1_review_response_2026-04-29.md  phase_1.1_deep_review_findings.md  phase_1.1_grokbrain_residual_check.md  s4_innovation_registry_summary.md
council-reviews/: Constitutional-Scribe_Response-to-Copilot_Stacked-Incentives_Filesystem-as-Ontology_2026-04-29.md  HANDOFF_REQUEST_Parallel_Lane_Code_Authorship_v1-0_2026-04-29.md  MSG_Manus_S7_to_Claude_S1_v3.10_responses.md  S4_Innovation_Catalog_Architecture_Integration.md  claude_anthropic_auth_disposition.txt  consolidated_task_list_2026-04-29.md  deepseek_vendor_suite_v1.0.md  federation_integration_analysis.md  five_doc_integration_notes.md  gemini_exec_review_canonical_record_2026-04-29.md  gemini_glass_takeover_analysis.md  gemini_indiana_genesis_impl_v1.0.md  gemini_indiana_genesis_structure_v1.0.md  gpt_atlas_lattice_codebase_blueprint_v1.0.md  gpt_indiana_genesis_skeleton_v1.0.md  gpt_production_runtime_skeleton.txt  gpt_v602_adversarial_code_review.md  grok_deepseek_oneclick_adapter.txt  grok_microsoft_s4_full_integration.txt  grok_muskverse_symbiosis_patch_v2.4.md  grok_switzerland_oneclick_x_integration.txt  manus_response_five_doc_integration.md  manus_response_innovations_and_missing_priorities.md  manus_response_to_deepseek_build_plan_review.md  manus_response_to_gpt_v6_synthesis.md  manus_response_to_handoff_request_v1.0.md  manus_response_to_notion_ai_v1.5_review.md  manus_response_to_qwen3_deepseek_sovereignty.md  manus_response_to_v606_vwb_sovereignty.md  s1_path_b_memo_element145_fixes_2026-04-29.md  s4_github_assessment_2026-04-29.md  s4_innovation_registry_2026-04-29.docx  v1.7_multi_council_integration_analysis.md  v3.1_integration_analysis.md  v602_codebase_analysis.md  weave_v254_key_findings.md
deploy/: README.md
docs/: 12x12_ontological_matrix.md  COMPLETE_BUILD_PLAN_v3.14.md  CONSTITUTIONAL_GOVERNANCE_LAYER.md  FILESYSTEM_AS_ONTOLOGY_SYNTHESIS_v1.0.md  FORK_SYNC_STRATEGY.md  ONTOLOGY_CROSS_REFERENCE_SYNTHESIS_v1.0.md  architecture.md  capability_matrix.md  publishable_artifacts_inventory.md  verified_external_sources.md
domain_repos/: README.md  core_repo_status.yaml  domain_repo_index.yaml
e145/: manifest.yaml  routing_escalation.yaml
e145/element145-package/element145/: __init__.py  lattice_ontology.yaml  pyproject.toml  shugs.py
e145/element145-package/element145/integrations/: __init__.py  copilot_plugin.py
e145/element145-package/element145/tests/: __init__.py  test_core.py  test_shugs.py
e145/rust-kernel/claude-contrib/: CLAUDE_README.md  Cargo.toml
e145/rust-kernel/claude-contrib/src/: lib.rs
e146/: README.md  manifest.yaml
e147/: manifest.yaml
e148/: manifest.yaml
e149/: manifest.yaml
element-145/: manifest.yaml
element-145/rust-kernel/: Cargo.toml
element-145/rust-kernel/claude-contrib/docs/: architecture.md  capability_matrix.md  grok_shred_analysis.md  noosphere_defense.md
element-145/rust-kernel/claude-contrib/python/core/: manus_core.py
element-145/rust-kernel/claude-contrib/python/tests/: test_all.py
element-145/rust-kernel/claude-contrib/src/: main.rs
element-145/rust-kernel/noosphere/: Cargo.toml
element-145/rust-kernel/pantheon/: Cargo.toml
enterprise/: Aluminum_OS_Enterprise_Specification_v1.0.md
forge-cli/: Cargo.toml
forge-cli/src/: govern.rs  main.rs  render.rs
google-studio/: MIGRATION_INDEX.md
governance/: Integrated_Constitutional_Substrate_v2.0.md  JANUS_HITL_Ethics_Session.md
health/: HEALTH_LAYER_VISION.md  texas-neuro-rehab-patient-rights.md
infrastructure/: 21st_Century_ROAD_Housing_Act.md
integrations/: Alexandria_CLI_Spec.md
intelligence/: AI_Intelligence_Sweep_Feb26-Mar12_2026.md  Aluminum_OS_Tech_Integration_Report_2026-03-12.md
kintsugi/: README.md  __init__.py
memory/: SHELDONBRAIN_LLM-Native_Memory_Architecture_v1.0.md
orcs/: ORC-019_Indiana_Genesis_Synthesis_v1.0.md  ORC-021_Switzerland_Layer_Federation_Synthesis_v1.0.md  ORC-022_Novel_Research_Synthesis_v1.0.md  ORC-023_Sprint2_Codebase_Synthesis_v1.0.md  ORC-024_Codebase_Reconciliation_TPU_Simulation_Synthesis_v1.0.md  ORC-025_Mega_Integration_TOS_Sovereignty_Federation_Synthesis_v1.0.md  ORC-026_House5_Arts_Council_Round_Synthesis_v1.1.md  ORC-027_House5_Gaming_Microsoft_S4_Synthesis_v1.0.md  ORC-028_3Seat_Council_Review_Synthesis_v1.0.md  ORC-029_Claude_S1_Boot_Manifest_Architecture_Synthesis_v1.0.md  ORC-030_Claude_S1_Scribe_Audit_Synthesis_v1.0.md  ORC-031_Claude_S1_Scribe_Verification_Synthesis_v1.0.md  ORC-032_TOS_Compliance_Architecture_Stub_v0.1.md  ORC-032_TOS_Compliance_Architecture_v1.0.md  ORC-033_S4_ORC032_Full_Expansion_Synthesis_v1.0.md  ORC-034_Innovation_Registry_Synthesis_v1.0.md  ORC-035_S4_Complete_Innovation_Registry_v1.0.md  ORC-036_SHUGS_SNRS_Bridge_Stub_v0.1.md
plugins/: CONTRADICTION_RESOLUTION.md  ECOSYSTEM_MERGE.md  INTEGRATION_BRIDGE.md  PLUGIN_REGISTRY.yaml
protocols/: ATLAS_LATTICE_PROTOCOL_STACK_V1.md
registries/: 12x12_matrix.yaml  capability_matrix.csv  capability_matrix.yaml  doctrine_aliases.yaml  doctrine_registry.yaml  innovations_registry.yaml  inv-44-tos-compliance.yaml  invariant_registry.yaml  market_power_matrix.yaml  module_registry.yaml  ontology_lock.sha256  v3_to_v4_migration.yaml
research/: README.md
specifications/: Aluminum_OS_Agent_Control_Plane_Specification_v1.0.md  UWS_MCP_Governance_Layer_Specification_v1.0.md
specs/: AGENT_CONTROL_PLANE_CODEBASE_V0.1.md
src/: constitution_domains.rs  health.rs  (+1 more)
(+1469 files in other folders)
