# ============================================================
# Aluminum OS — Cargo Workspace
# ============================================================
# Members:
#   .          → aluminum-os (Forge Core kernel library + aluminum-boot binary)
#   cli        → tucker (Tucker V4 CLI fork — full async council/governance)
#   forge-cli  → forge  (Unified 51% native AI CLI — stdlib-only, ships immediately)
#
# Build all:   cargo build --release
# Build forge: cargo build -p forge --release
# Build tucker: cargo build -p tucker --release
# ============================================================

[workspace]
members = [".", "cli", "forge-cli"]
resolver = "2"

[package]
name = "aluminum-os"
version = "0.3.0"
edition = "2021"
description = "Aluminum OS — Constitutional AI Governance Kernel (Forge Core)"
license = "MIT"
repository = "https://github.com/splitmerge420/aluminum-os"
authors = ["Atlas Lattice Foundation"]

[features]
default = ["std"]
std = []

[[bin]]
name = "aluminum-boot"
path = "src/main.rs"

[lib]
name = "aluminum_os"
path = "src/lib.rs"
