[package]
name = "aluminum-os"
version = "0.3.0"
edition = "2021"
description = "Aluminum OS — Constitutional AI Governance Kernel (Forge Core)"
license = "MIT"
repository = "https://github.com/atlaslattice/aluminum-os"
authors = ["Atlas Lattice Foundation"]

[features]
default = ["std"]
std = []

[[bin]]
name = "aluminum-boot"
path = "src/main.rs"

[lib]
name = "aluminum_os"
path = "src/lib.rs"
