[workspace]
members = [
    "forge-boot",
    "forge-core",
    "sheldonbrain",
    "pantheon",
    "noosphere",
]
resolver = "2"

[workspace.package]
version = "3.0.0"
edition = "2021"
license = "MIT"
authors = ["Daavud <splitmerge420@github.com>", "Manus AI"]
description = "Aluminum OS v3.0 — The Sovereign AI Substrate"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
env_logger = "0.11"
sha2 = "0.10"
ed25519-dalek = "2.1"
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }
