[package]
name = "aluminum-os"
version = "3.0.0"
edition = "2021"
description = "Aluminum OS v3.0 — Forge Core (Ring 0) microkernel"
license = "MIT"
authors = ["Atlas Lattice Foundation"]

[features]
default = ["std"]
std = ["serde/std", "sha2/std"]
# no_std mode for bare-metal boot — disables HashMap, uses fixed arrays
bare_metal = []

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
sha2 = { version = "0.10", default-features = false }

[dev-dependencies]
serde_json = "1.0"

[[bin]]
name = "forge-boot"
path = "src/main.rs"
required-features = ["std"]  # Boot simulator requires std

[profile.release]
opt-level = "z"
lto = true
